<resources>
    <string name="app_name">Piksi RTK Sync</string>
	<string name="logo">Logo</string>
	<string name="title_string">Piksi Base Station</string>
	<string name="base_station_connection">Base Station Connection</string>
	<string name="no_data">No Data</string>
	<string name="server_connection">Server Connection</string>
	<string name="base_connection_error">Base connection error</string>
	<string name="error">Error</string>
	<string name="waiting">Waiting</string>
	<string name="no_connection">No connection</string>
	<string name="data_received">"Data received: "</string>
	<string name="data_uploaded">"Data uploaded: "</string>
	<string name="server_connection_ok">Server OK</string>
	<string name="server_connection_stopped">Server stopped</string>
	<string name="server_connection_error">Server error</string>
	<string name="base_connection_ok">Base connection OK</string>
	<string name="base_connection_wait">Base connection wait</string>
</resources>
