<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/drivingBackground"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:id="@+id/parentLayout"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/titleTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:fontFeatureSettings="smcp"
		android:gravity="center"
		android:text="@string/title_string"
		android:textAlignment="center"
		android:textColor="@color/drivingForeground"
		android:textSize="42sp"
		android:textStyle="bold"/>

	<ImageView
		android:id="@+id/logoImageView"
		android:layout_width="128dp"
		android:layout_height="128dp"
		android:layout_below="@id/titleTextView"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:contentDescription="@string/logo"
		android:src="@drawable/logo_swiftnav"/>


	<TextView
		android:id="@+id/baseStatusTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/logoImageView"
		android:layout_marginTop="20dp"
		android:fontFeatureSettings="smcp"
		android:gravity="center"
		android:text="@string/base_station_connection"
		android:textAlignment="center"
		android:textColor="@color/drivingForeground"
		android:textSize="22sp"
		android:textStyle="bold"/>

	<ProgressBar
		android:id="@+id/baseProgressBar"
		style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/baseStatusTextView"
		android:layout_centerVertical="true"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="10dp"
		android:indeterminate="true"
		android:visibility="invisible"/>

	<TextView
		android:id="@+id/baseDataTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/baseProgressBar"
		android:layout_centerVertical="true"
		android:layout_marginBottom="30dp"
		android:gravity="center"
		android:text="@string/no_data"
		android:textColor="@color/drivingForeground"/>

	<TextView
		android:id="@+id/serverStatusTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/baseDataTextView"
		android:layout_marginTop="20dp"
		android:fontFeatureSettings="smcp"
		android:gravity="center"
		android:text="@string/server_connection"
		android:textAlignment="center"
		android:textColor="@color/drivingForeground"
		android:textSize="22sp"
		android:textStyle="bold"/>

	<ProgressBar
		android:id="@+id/serverProgressBar"
		style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/serverStatusTextView"
		android:layout_centerVertical="true"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="10dp"
		android:indeterminate="true"
		android:visibility="invisible"/>

	<TextView
		android:id="@+id/serverDataTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/serverProgressBar"
		android:layout_centerVertical="true"
		android:layout_marginBottom="30dp"
		android:gravity="center"
		android:text="@string/no_data"
		android:textColor="@color/drivingForeground"/>


	<ImageView
		android:id="@+id/dtuLogoImageView"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_below="@id/serverDataTextView"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/logo"
		android:layout_alignParentBottom="true"
		android:src="@drawable/dtulogo_w"/>

</RelativeLayout>
